# MiniML-Interpreter

./: .gitignore  .travis.yml  README.md  dune-project  feature.txt  main.ml  miniml.opam
examples/: mini-intepreter.ml
src/: cui.ml  dune  eval.ml  lexer.mll  parser.mly  syntax.ml  typing.ml  unionfind.ml
tests/: and_let_test.ml  arith_prim_test.ml  dune  fun_test.ml  if_test.ml  infix_fun_test.ml  let_poly_test.ml  let_rec_err_test.ml  let_rec_test.ml  let_test.ml  matching_test.ml  record_test.ml  ref_test.ml  type_test_easy.ml  typing_test1.ml  unionfind_test.ml  utility.ml  variant_test.ml
