opam-version: "2.0"
version: "0.1"
synopsis: "miniML intepreter"
maintainer: "suibaka <suibaka@gmail.com>"
authors: "suibaka <suibaka@gmail.com>"
homepage: "https://github.com/Suikaba/MiniML-Intepreter"
depends: [ "dune" "menhir" "core" "ounit" ]
build: [
  ["dune" "build"]
]
build-test: ["dune" "runtest"]
